hotspringsapp/static/gns.css
/* ... */
#tempSlider .ui-rangeSlider-bar
{  
  background: rgba(125,125,125,0.8);
}

.ui-accordion-header
{
  background:rgba(29,155,171,0.75);
  color: white;
  font-family: 'questrialregular';
}


.ui-rangeSlider-label,.ui-rangeSlider-arrow{
  background: white;
}

.ui-rangeSlider-rightArrow .ui-rangeSlider-arrow-inner
{
  border-left:10px solid #1D9BAB;
}

.ui-rangeSlider-leftArrow .ui-rangeSlider-arrow-inner
{
  border-right:10px solid #1D9BAB;
}

.ui-rangeSlider-label-inner
{
  border-top:10px solid white;
}


.ui-rangeSlider-label
{
  color:rgb(29,155,171);
}

.ui-rangeSlider
{
  margin-top:0px;
  margin-bottom: 10px;
}

/* end */

.menuItem
{
  float:right;
  margin:64px 10px 0 10px;
  padding:5px 5px 0 5px;
  border-top-right-radius: 10px;
  border-top-left-radius: 10px;
}

.dropdown a
{
  text-decoration: none;
}

.caret
{
  border-top: 4px solid #1D9BAB;
}


.carousel
{
  margin-bottom: 0;
}

#social a
{

float:left;
padding: 0 5px;

}

label
{
  font-size: 16px;
  font-family: 'questrialregular';
}

#aboutText
{
  margin:0 0 20px 0;
  font-family: 'questrialregular';
  font-size: 16px;
  
}

#aboutText p
{
  margin: 20px 0;
}


.accordion-heading
{
  background-color: rgb(29,155,171);
}

.accordion-heading a
{
  color: white;
  text-decoration: none;
}

.tab-heading
{
  background-color: rgb(29,155,171);
}

.tab-heading a
{
  color: white;
  text-decoration: none;
}

.nav-tabs.otsTabs > li > a:hover {
	background-color: rgb(29,155,171);
}

.nav-tabs.otsTabs > li.active > a:hover {
	background-color: white;
}

/* Index */

.title #index
{
  height:125px;
}

#cat-images img
{
  width: 300px;
  height: 500px;
  float: left;
}


/* Simple Search */

.colourClick:active
{

  background-color: rgb(29,155,171);
  color:white;
}

.chosen-container
{
  display: block;
  color: black;
}

.district-tier .chosen-container
{

}

.system-tier .chosen-container
{
  padding-left: 25px;
}

.location-tier .chosen-container
{
  padding-left: 50px;
}

.tiers
{
  color: black;
}


/* Browse by */

.browseby-caption
{
  height:40px;
  position:relative;
  background-color:rgb(29,155,171);
}

.browseby-caption h4
{
  margin: 0px;
  padding:8px 15px 0 15px;
  color:white;
}

#browseby 
{
  position:relative;
  background-color:white;
  text-decoration: none;

}

#browseby a
{

  text-decoration: none;

}


/* Simple Results */
#sidebar
{
 margin-left:0px;
 margin-right: 24px;
 padding-bottom: 15px;


}

#sidebar-contents{

  background-color:rgba(29,155,171,0.5);
margin: 0px 0px;
padding: 0px 11px; 


height: 100%;
}







/* Sample Site */

#sampleSiteImg
{
  margin-left:5px;
}

.unitText
{
  font-size: 10px;
  float: left;
}

.table td{
  padding-left: 15px;
}

.descTable
{
  margin-top: 35px;
  white-space:nowrap;
}

.descTable .progress
{
  width:50%;
  float:left;
  margin: 0 5px;
}

.progress p
{
  color: black;

}

.descTable td
{
  text-align: right;
  padding: 5px;

}

.descTable p
{
  margin-right:5px;
  margin-left: 5px;

}

.pagination
{
  margin:0px;
}

.progressAmount
{
  font-size: 14px;
}

#status
{
  overflow: visible;
}

.vis-heading
{
  text-align: center;
}


/* Template */

.article h4:first-child
{
  background-color:rgb(29,155,171);
  padding:10px;
  margin:0;
  margin-bottom:5px;
  border-radius:10px;
  font-weight:bold;
  color: white;
}


.element-background
{
    background-color:rgb(29,155,171);
  padding:10px;
  border-radius:10px
}

.row-fluid
{
  position: relative;
}

.default-background
{
  background-color:rgba(29,155,171,0.75);
}

.opaque 
{
  background-color:#1D9BAB; 
  background-color:rgba(29,155,171,0.5);
  position: relative;
}

.contrast 
{
  color: #ffffff;
  text-decoration: none;   
}

.title
{
  position:relative;
  background-color:#1D9BAB; /* IE */
  background-color:rgba(29,155,171,0.5);
  padding:25px 15px 15px 15px;


}

.title h2
{
  margin: 0px;
  color: white;
}


.contrast p
{
  font-size: 16px;
}

.divider
{
  height:15px;
  position:relative;
  background-color:white;
}

.smallIcons img
{
  float:right; 
  margin:0 2px; 
  width:14px;
  height:14px;
}

.mediumIcons img
{
  float:right; 
  margin:0 2px; 
  width:42px;
  height:42px;
}

input[type=radio]
{
  
display: none;

}

.textBlock
{
  font-size: 16px;
}

.zoom-in
{
  cursor:-webkit-zoom-in;
  cursor:-moz-zoom-in;
}

figure
{
  border: 1px solid black;
  border-radius: 10px;
  margin: 0px;
  padding: 10px;
  margin-bottom: 5px;
}

figure img
{
margin-left: auto;
margin-right: auto;
display: block;
margin-bottom: 5px;
}


figcaption
{
  color:white;
  text-align:center;
  background-color:rgb(29,155,171);
  border-radius: 5px;
}

figcaption a
{
   color:white;
   
}

